# MCPP

./: .gitignore  CMakeLists.txt
examples/iot_server/: main.cc
include/mcpp/: rpc.hpp  server.hpp  stdio_transport.hpp  tool.hpp
src/: server.cc  stdio_transport.cc
